--- a/src/Translation/locales/ko.json
+++ b/src/Translation/locales/ko.json
@@ -1,57 +1,206 @@
 {
-  "languages": {
-    "en": "영어",
-    "es": "스페인 사람",
-    "fr": "프랑스 국민",
-    "zh": "중국말",
-    "ko": "한국어"
-  },
-  "global": {
-    "atlas": "지도",
-    "marketplace": "시장",
-    "profile": "나의 토지",
-    "activity": "활동",
-    "parcels": "필지",
-    "contributions": "공헌",
-    "settings": "설정",
-    "blog": "블로그",
-    "website": "웹 사이트",
-    "community_chat": "커뮤니티 채팅",
-    "cancel": "취소",
-    "submit": "제출",
-    "confirm": "확인",
-    "retry": "다시 해 보다",
-    "connect": "잇다",
-    "authorized": "허가",
-    "unauthorized": "무단",
-    "wallet_address": "지갑 주소",
-    "balance": "밸런스",
-    "for": "에 대한",
-    "sign_in": "로그인",
-    "sign_in_notice": "이 페이지에 액세스하려면 {sign_in_link}해야합니다.",
-    "owned_by": "에게 소유 된",
-    "owned_by_link": "{address_link} 소유",
-    "connecting": "연결 중",
-    "click_here": "여기를 클릭하십시오"
+  "activity": {
+    "completed": "완료 됨",
+    "no_activity": "아직 활동이 없습니다.",
+    "pending": "보류",
+    "start": "{settings_link}에서 일부 MANA를 승인함으로써 시작할 수 있습니다."
   },
   "address": {
     "its_you": "너야"
   },
   "atlas": {
-    "owner": "소유자 : {owner}",
-    "no_owner": "소유자 없음",
-    "your_parcel": "당신의 토지",
-    "on_sale": "판매 중 :",
     "loading": "로드 중",
-    "road": "도로"
+    "no_owner": "소유자 없음",
+    "on_sale": "판매 중 :",
+    "owner": "소유자 : {owner}",
+    "road": "도로",
+    "your_parcel": "당신의 토지"
+  },
+  "buy_mana": {
+    "action": "더 사",
+    "amount_too_big": "이 금액은 Bancor Network에 비해 너무 큽니다.",
+    "available_eth": "사용 가능 : {eth} ETH",
+    "not_enough": "당신은 이것에 대해 지불 할 ETH가 충분하지 않습니다.",
+    "pay_with": "지불",
+    "powered_by": "작성자 : {bancor_link}",
+    "rate": "율",
+    "receive": "받다",
+    "slippage": "미끄러짐",
+    "title": "ETH을 MANA로 변환"
+  },
+  "color_key": {
+    "contribution": "공헌",
+    "district": "지구",
+    "loading": "로드 중",
+    "on_sale": "판매 중",
+    "plaza": "광장",
+    "roads": "도로",
+    "taken": "점유된",
+    "title": "색상 키",
+    "unowned": "소유자가 없는",
+    "yours": "당신 토지"
+  },
+  "contribution": {
+    "proposal": "제안"
+  },
+  "derivation_path": {
+    "invalid":
+      "지갑에 대해 잘못된 파생 경로를 설정했습니다. 파생 경로는 패턴 44 '/ 60 | 61'/ x '/ n을 따라야합니다."
+  },
+  "footer": {
+    "color_key": "색상 키",
+    "copyright": "© 2018 Decentraland. 판권 소유.",
+    "mini_copyright": "© 2018 Decentraland.",
+    "privacy_policy": "개인 정보 정책",
+    "terms": "이용 약관"
+  },
+  "global": {
+    "activity": "활동",
+    "atlas": "지도",
+    "authorized": "허가",
+    "balance": "밸런스",
+    "blog": "블로그",
+    "cancel": "취소",
+    "click_here": "여기를 클릭하십시오",
+    "community_chat": "커뮤니티 채팅",
+    "confirm": "확인",
+    "connect": "잇다",
+    "connecting": "연결 중",
+    "contributions": "공헌",
+    "for": "에 대한",
+    "marketplace": "시장",
+    "owned_by": "에게 소유 된",
+    "owned_by_link": "{address_link} 소유",
+    "parcels": "필지",
+    "profile": "나의 토지",
+    "retry": "다시 해 보다",
+    "settings": "설정",
+    "sign_in": "로그인",
+    "sign_in_notice": "이 페이지에 액세스하려면 {sign_in_link}해야합니다.",
+    "submit": "제출",
+    "unauthorized": "무단",
+    "wallet_address": "지갑 주소",
+    "website": "웹 사이트"
+  },
+  "homepage": {
+    "get_started": "시작하기",
+    "hero_subtitle": "랜드를 위한 탈중앙화된 마켓. 수수료 없음.",
+    "hero_title": "제네시스 시티에서 가장 이상적인 위치를 선택하시기 바랍니다.",
+    "newest_lands": "최신 랜드",
+    "view_more": "더 보기",
+    "watch_tutorial": "튜토리얼보기"
+  },
+  "languages": {
+    "en": "영어",
+    "es": "스페인 사람",
+    "fr": "프랑스 국민",
+    "ko": "한국어",
+    "zh": "중국말"
   },
   "marketplace": {
     "empty": "죄송합니다. 여기에는 아무것도 없습니다.",
     "filter": {
-      "newest": "최신",
       "cheapest": "가장 저렴한",
-      "close_to_expire": "가장 빨리 만료되는"
+      "close_to_expire": "가장 빨리 만료되는",
+      "newest": "최신"
     }
+  },
+  "parcel": {
+    "no_description": "설명 없음",
+    "no_name": "이름 없음",
+    "view": "보기"
+  },
+  "parcel_buy": {
+    "about_to_buy": "{parcel_name}을(를) 구입하려고 합니다.",
+    "approved_balance": "승인 된 잔액은 {approved_balance}입니다.",
+    "buy_land": "토지 구입",
+    "buy_mana": "MANA를 사기 위해 {click_here}.",
+    "didnt_approve": "당신은 MANA를 승인하지 않았습니다",
+    "needs_at_least": "이 토지를 사려면 적어도 {value}가 필요합니다.",
+    "please_approve": "{settings_link} (으)로 이동하여 MANA를 승인하십시오.",
+    "total_balance": "Your balance is {balance}"
+  },
+  "parcel_cancel": {
+    "about_to_cancel": "{parcel}의 판매를 취소하려고합니다.",
+    "cancel_land": "토지 판매 취소",
+    "not_for_sale": "소포 {parcel}은 판매용이 아닙니다."
+  },
+  "parcel_detail": {
+    "actions": {
+      "cancel": "판매취소",
+      "edit": "편집",
+      "sell": "판매",
+      "transfer": "이전"
+    },
+    "description": "설명",
+    "empty_description": "이 필지에는 설명이 없습니다",
+    "history": {
+      "auction": "경매",
+      "event": "행사",
+      "from": "에서",
+      "price": "가격",
+      "sold": "판매",
+      "title": "거래 내역",
+      "to": "에",
+      "when": "언제"
+    },
+    "owner": {
+      "no_owner": "소유자 없음",
+      "part_of": "{name}의 일부"
+    },
+    "publication": {
+      "buy": "구매",
+      "price": "가격",
+      "time_left": "남은 시간"
+    },
+    "tags": {
+      "title": "하이라이트"
+    },
+    "view": "아틀라스에서보기"
+  },
+  "parcel_edit": {
+    "description": "설명",
+    "edit_land": "토지 편집",
+    "name": "이름",
+    "set_name_and_desc": "{parcel_name}의 이름 및 설명 설정"
+  },
+  "parcel_publish": {
+    "already_sold": "이 토지는 이미 {value}에 판매 중입니다.",
+    "errors": {
+      "maximum_expiration": "최대 만료일은 {date}입니다.",
+      "maximum_land_price": "최대 LAND 가격은 {value} MANA입니다.",
+      "minimum_expiration": "최소 만료일은 하루입니다.",
+      "minimum_land_price": "최저 가격은 {value} MANA입니다."
+    },
+    "expiration": "만료",
+    "expiration_placeholder": "이 게시물의 만료일",
+    "list_land": "판매용 토지 목록",
+    "please_authorize":
+      "{settings_link}로 이동하여 판매용으로 등록하기 전에 마켓 플레이스에서 토지를 대신 사용하도록 승인해야합니다.",
+    "price": "가격",
+    "price_placeholder": "이 토지의 MANA 가격",
+    "set_land_price": "{parcel_name}의 가격 및 만료일 설정"
+  },
+  "parcel_tags": {
+    "adjacent": "인접한",
+    "district": "지구",
+    "plaza": "광장",
+    "proximity": "{distance} 개 분실물",
+    "road": "도로"
+  },
+  "parcel_transfer": {
+    "about_to_transfer": "{parcel_name}을(를) 이전하려고합니다.",
+    "cant_transfer": "이 토지는 판매 중이므로 이전 할 수 없습니다.",
+    "check_address": "신중하게 주소를 확인하십시오",
+    "error_persists":
+      "문제가 지속되면 {community_chat_link}(으)로 문의하십시오.",
+    "irreversible":
+      "토지를 이전하는 것은 돌이킬 수 없는 작업이라는 것을 기억하십시오.",
+    "placeholder": "예: {address}",
+    "recipient_address": "수신자 주소",
+    "transfer_land": "토지 이전",
+    "unknown_error":
+      "알 수없는 오류가 발생했습니다. 자세한 내용은 아래와 같습니다."
   },
   "profile_page": {
     "empty": "사용자에게는 {content}가 없습니다.",
@@ -59,221 +208,72 @@
   },
   "publication": {
     "acquired_at": "{date}에 인수 됨",
+    "canceled": "취소 됨",
     "expired_at": "{time} 전 만료 됨",
     "expires_in": "{time}에 만료 됨",
     "expires_in_more_than_years": "{years} 년 만료 됨",
-    "view": "보기",
     "sold": "판매 됨",
-    "canceled": "취소 됨"
+    "view": "보기"
   },
-  "contribution": {
-    "proposal": "제안"
+  "settings": {
+    "approve_mana":
+      "{marketplace_contract_link}에게 MANA를 대신하여 귀하를 대신하여 운영하도록 승인합니다.",
+    "approve_mana_check": "{mana_to_approve} MANA 승인을 위해 확인하십시오.",
+    "authorization": "권한 부여",
+    "authorize":
+      "{marketplace_contract_link}에게 귀하를 대신하여 토지를 운영하도록 승인하십시오.",
+    "authorize_land_check": "선택하면 시장 계약에 대한 토지 사용을 허가합니다",
+    "disapprove_mana_check":
+      "선택 해제하면 마켓 플레이스 계약에 대한 MANA 사용 권한이 승인되지 않음",
+    "mana_approved":
+      "{marketplace_contract_link}이 (가) MANA를 대신하여 귀하를 대신하여 운영하도록 승인했습니다.",
+    "marketplace_contract": "시장 계약",
+    "pending_tx": "보류중인 거래가 있습니다.",
+    "unauthorize_land_check":
+      "선택 해제하면 시장 계약에 대한 토지 사용 권한이 없어 집니다",
+    "you_authorized": "{marketplace_contract_link}을(를) 승인했습니다."
   },
-  "parcel": {
-    "view": "보기",
-    "no_name": "이름 없음",
-    "no_description": "설명 없음"
-  },
-  "parcel_detail": {
-    "description": "설명",
-    "empty_description": "이 필지에는 설명이 없습니다",
-    "view": "아틀라스에서보기",
-    "actions": {
-      "edit": "편집",
-      "transfer": "이전",
-      "sell": "판매",
-      "cancel": "판매취소"
-    },
-    "publication": {
-      "price": "가격",
-      "time_left": "남은 시간",
-      "buy": "구매"
-    },
-    "owner": {
-      "part_of": "{name}의 일부",
-      "no_owner": "소유자 없음"
-    },
-    "tags": {
-      "title": "하이라이트"
-    },
-    "history": {
-      "title": "거래 내역",
-      "event": "행사",
-      "price": "가격",
-      "when": "언제",
-      "from": "에서",
-      "to": "에",
-      "sold": "판매",
-      "auction": "경매"
-    }
-  },
-  "parcel_tags": {
-    "road": "도로",
-    "plaza": "광장",
-    "district": "지구",
-    "adjacent": "인접한",
-    "proximity": "{distance} 개 분실물"
-  },
-  "parcel_edit": {
-    "edit_land": "토지 편집",
-    "set_name_and_desc": "{parcel_name}의 이름 및 설명 설정",
-    "name": "이름",
-    "description": "설명"
-  },
-  "parcel_transfer": {
-    "transfer_land": "토지 이전",
-    "about_to_transfer": "{parcel_name}을(를) 이전하려고합니다.",
-    "irreversible":
-      "토지를 이전하는 것은 돌이킬 수 없는 작업이라는 것을 기억하십시오.",
-    "check_address": "신중하게 주소를 확인하십시오",
-    "cant_transfer": "이 토지는 판매 중이므로 이전 할 수 없습니다.",
-    "recipient_address": "수신자 주소",
-    "unknown_error":
-      "알 수없는 오류가 발생했습니다. 자세한 내용은 아래와 같습니다.",
-    "error_persists":
-      "문제가 지속되면 {community_chat_link}(으)로 문의하십시오.",
-    "placeholder": "예: {address}"
-  },
-  "parcel_buy": {
-    "buy_land": "토지 구입",
-    "about_to_buy": "{parcel_name}을(를) 구입하려고 합니다.",
-    "approved_balance": "승인 된 잔액은 {approved_balance}입니다.",
-    "needs_at_least": "이 토지를 사려면 적어도 {value}가 필요합니다.",
-    "buy_mana": "MANA를 사기 위해 {click_here}.",
-    "didnt_approve": "당신은 MANA를 승인하지 않았습니다",
-    "please_approve": "{settings_link} (으)로 이동하여 MANA를 승인하십시오.",
-    "total_balance": "Your balance is {balance}"
-  },
-  "parcel_publish": {
-    "list_land": "판매용 토지 목록",
-    "set_land_price": "{parcel_name}의 가격 및 만료일 설정",
-    "price": "가격",
-    "price_placeholder": "이 토지의 MANA 가격",
-    "expiration": "만료",
-    "expiration_placeholder": "이 게시물의 만료일",
-    "already_sold": "이 토지는 이미 {value}에 판매 중입니다.",
-    "please_authorize":
-      "{settings_link}로 이동하여 판매용으로 등록하기 전에 마켓 플레이스에서 토지를 대신 사용하도록 승인해야합니다.",
-    "errors": {
-      "minimum_expiration": "최소 만료일은 하루입니다.",
-      "maximum_expiration": "최대 만료일은 {date}입니다.",
-      "minimum_land_price": "최저 가격은 {value} MANA입니다.",
-      "maximum_land_price": "최대 LAND 가격은 {value} MANA입니다."
-    }
-  },
-  "parcel_cancel": {
-    "cancel_land": "토지 판매 취소",
-    "about_to_cancel": "{parcel}의 판매를 취소하려고합니다.",
-    "not_for_sale": "소포 {parcel}은 판매용이 아닙니다."
-  },
-  "activity": {
-    "no_activity": "아직 활동이 없습니다.",
-    "start": "{settings_link}에서 일부 MANA를 승인함으로써 시작할 수 있습니다.",
-    "pending": "보류",
-    "completed": "완료 됨"
+  "sign_in": {
+    "account_unlocked": "계정이 잠금 해제되어 있는지 확인하십시오.",
+    "options":
+      "먼저 모든 땅을 지킬 안전한 장소가 필요합니다. {metamask_link} 확장 프로그램이나 {ledger_nano_link}와 같은 하드웨어 지갑을 사용할 수 있습니다."
   },
   "transaction": {
     "approved":
       "{marketplace_contract_link} 이 (가) MANA를 대신하여 귀하를 대신하여 운영하도록 승인했습니다.",
-    "disapproved":
-      "귀하를 대신하여 {marketplace_contract_link}의 MANA 운영을 허가받지 않았습니다.",
     "authorize":
       "귀하를 대신하여 토지를 운영하기위한 {action} {marketplace_contract_link} 이 있습니다.",
-    "transfer_mana": "{mana} MANA를 {address_link}으로 이전했습니다.",
+    "buy": "{parcel_link}을(를) 구입했습니다.",
+    "buy_mana": "너는 {mana} MANA를 구입했다.",
+    "cancel": "{parcel_link}의 {publication_link}을 취소했습니다.",
+    "disapproved":
+      "귀하를 대신하여 {marketplace_contract_link}의 MANA 운영을 허가받지 않았습니다.",
     "edit":
       "{parcel_link}을(를) \"{name}\" 이름 및 설명 \"{description}\" (으)로 수정했습니다.",
-    "transfer": "{parcel_link}을 {owner_link}로 이전했습니다.",
     "publish": "{parcel_link}을(를) 게시했습니다.",
-    "buy": "{parcel_link}을(를) 구입했습니다.",
-    "cancel": "{parcel_link}의 {publication_link}을 취소했습니다.",
-    "buy_mana": "너는 {mana} MANA를 구입했다."
+    "transfer": "{parcel_link}을 {owner_link}로 이전했습니다.",
+    "transfer_mana": "{mana} MANA를 {address_link}으로 이전했습니다."
   },
   "transaction_status": {
-    "see_activity": "거래 내역을 보려면 {activity_link}을 방문하십시오.",
-    "text": {
-      "pending": "거래가 확인되기를 기다리고 있습니다.",
-      "failed": "거래가 실패했습니다. 새 거래를 보낼 수 있습니다."
+    "idle": {
+      "please_confirm": "Please confirm the transaction"
     },
     "parcel": {
       "still_pending":
         "{parcel_name}에 아직 {transactions_count} 개의 거래가 보류 중입니다."
     },
-    "idle": {
-      "please_confirm": "Please confirm the transaction"
+    "see_activity": "거래 내역을 보려면 {activity_link}을 방문하십시오.",
+    "text": {
+      "failed": "거래가 실패했습니다. 새 거래를 보낼 수 있습니다.",
+      "pending": "거래가 확인되기를 기다리고 있습니다."
     }
   },
-  "settings": {
-    "pending_tx": "보류중인 거래가 있습니다.",
-    "disapprove_mana_check":
-      "선택 해제하면 마켓 플레이스 계약에 대한 MANA 사용 권한이 승인되지 않음",
-    "approve_mana_check": "{mana_to_approve} MANA 승인을 위해 확인하십시오.",
-    "mana_approved":
-      "{marketplace_contract_link}이 (가) MANA를 대신하여 귀하를 대신하여 운영하도록 승인했습니다.",
-    "approve_mana":
-      "{marketplace_contract_link}에게 MANA를 대신하여 귀하를 대신하여 운영하도록 승인합니다.",
-    "marketplace_contract": "시장 계약",
-    "unauthorize_land_check":
-      "선택 해제하면 시장 계약에 대한 토지 사용 권한이 없어 집니다",
-    "authorize_land_check": "선택하면 시장 계약에 대한 토지 사용을 허가합니다",
-    "you_authorized": "{marketplace_contract_link}을(를) 승인했습니다.",
-    "authorize":
-      "{marketplace_contract_link}에게 귀하를 대신하여 토지를 운영하도록 승인하십시오.",
-    "authorization": "권한 부여"
-  },
   "transfer_mana": {
-    "title": "MANA 이전",
     "action": "이전",
     "current_balance": "현재 잔액은 {balance}입니다.",
     "irreversible":
       "MANA를 이전하는 것은 돌이킬 수없는 작업이라는 것을 기억하십시오.",
-    "own_address_warning": "그것은 당신의 자신의 주소입니다!"
-  },
-  "buy_mana": {
-    "title": "ETH을 MANA로 변환",
-    "action": "더 사",
-    "available_eth": "사용 가능 : {eth} ETH",
-    "receive": "받다",
-    "pay_with": "지불",
-    "powered_by": "작성자 : {bancor_link}",
-    "rate": "율",
-    "slippage": "미끄러짐",
-    "not_enough": "당신은 이것에 대해 지불 할 ETH가 충분하지 않습니다.",
-    "amount_too_big": "이 금액은 Bancor Network에 비해 너무 큽니다."
-  },
-  "derivation_path": {
-    "invalid":
-      "지갑에 대해 잘못된 파생 경로를 설정했습니다. 파생 경로는 패턴 44 '/ 60 | 61'/ x '/ n을 따라야합니다."
-  },
-  "color_key": {
-    "title": "색상 키",
-    "yours": "당신 토지",
-    "taken": "점유된",
-    "district": "지구",
-    "contribution": "공헌",
-    "roads": "도로",
-    "plaza": "광장",
-    "unowned": "소유자가 없는",
-    "loading": "로드 중",
-    "on_sale": "판매 중"
-  },
-  "sign_in": {
-    "options":
-      "먼저 모든 땅을 지킬 안전한 장소가 필요합니다. {metamask_link} 확장 프로그램이나 {ledger_nano_link}와 같은 하드웨어 지갑을 사용할 수 있습니다.",
-    "account_unlocked": "계정이 잠금 해제되어 있는지 확인하십시오."
-  },
-  "footer": {
-    "color_key": "색상 키",
-    "privacy_policy": "개인 정보 정책",
-    "terms": "이용 약관",
-    "copyright": "© 2018 Decentraland. 판권 소유.",
-    "mini_copyright": "© 2018 Decentraland."
-  },
-  "homepage": {
-    "hero_title": "제네시스 시티에서 가장 이상적인 위치를 선택하시기 바랍니다.",
-    "hero_subtitle": "랜드를 위한 탈중앙화된 마켓. 수수료 없음.",
-    "get_started": "시작하기",
-    "watch_tutorial": "튜토리얼보기",
-    "newest_lands": "최신 랜드",
-    "view_more": "더 보기"
+    "own_address_warning": "그것은 당신의 자신의 주소입니다!",
+    "title": "MANA 이전"
   }
 }
